--- a/.github/workflows/macos.yml
+++ b/.github/workflows/macos.yml
@@ -1,38 +1,20 @@
 name: macOS
 
 on:
-  workflow_dispatch:
   push:
-    paths:
-      - 'rtime.h'
-      - 'RGFW.h'
-      - 'Makefile'
-      - 'examples/**'
-      - '.github/workflows/macos.yml'
     branches:
       - main
   pull_request:
-    paths:
-      - '**'
-      - 'examples/**'
-      - '.github/workflows/macos.yml'
+    branches:
+      - main
   release:
     types: [published]
 
-permissions:
-  contents: read
-
 jobs:
   build:
-    permissions:
-      contents: write  # for actions/upload-release-asset to upload release asset
     runs-on: macos-latest
 
-    env:
-      RELEASE_NAME: RGFW-dev_macos
-
     steps:
-
     - name: Build Library
       run: |
         clang main.c
