--- a/.github/workflows/windows.yml
+++ b/.github/workflows/windows.yml
@@ -1,28 +1,17 @@
 name: Windows
 
 on:
-  workflow_dispatch:
   push:
-    paths:
-      - 'rtime.h'
-      - '.github/workflows/windows.yml'
     branches:
       - main
   pull_request:
-    paths:
-      - '**'
-      - 'examples/**'
-      - '.github/workflows/windows.yml'
+    branches:
+      - main
   release:
     types: [published]
 
-permissions:
-  contents: read
-
 jobs:
   build:
-    permissions:
-      contents: write  # for actions/upload-release-asset to upload release asset
     runs-on: windows-latest
     strategy:
       fail-fast: false
@@ -39,11 +28,6 @@ jobs:
           bits: 64
           ARCH: "x86_64"
           WINDRES_ARCH: pe-x86-64
-        - compiler: zig
-          bits: 64
-          ARCH: "x86_64"
-          WINDRES_ARCH: pe-x86-64
-
     steps:
 
     - name: test C++
