--- a/.github/workflows/windows.yml
+++ b/.github/workflows/windows.yml
@@ -30,6 +30,9 @@ jobs:
           WINDRES_ARCH: pe-x86-64
     steps:
 
+    - name: Checkout repository
+      uses: actions/checkout@v2
+
     - name: test C++
       run: |
         g++ main.c
